remove injection of specifc NamespacedStorage
We cannot rely on the injection of a specific namespaced storage because we have "global" object mappers attached to mina that are not bound to a specific namespace. Where possible, we inject the storage directly (API, storage itself)